# starting-ragchatbot-codebase

./: .gitignore  CLAUDE.md  DOCUMENT_PROCESSING.md  PROJECT_OVERVIEW.md  REQUEST_FLOW.md  REQUEST_FLOW_DIAGRAM.html  frontend-changes.md  pyproject.toml
.claude/: settings.local.json
.github/: claude2.yml
.github/workflows/: claude-review.yml  claude.yml
backend/: ai_generator.py  app.py  config.py  rag_system.py  search_tools.py  vector_store.py
backend/tests/: conftest.py  test_ai_generator.py  test_api.py  test_rag_system.py  test_search_tools.py
frontend/: index.html  script.js  style.css
scripts/: format.sh  lint.sh  quality.sh
